// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

generator client {
  provider = "prisma-client-js"
}

generator dbml {
  provider = "prisma-dbml-generator"
}

datasource db {
  provider = "sqlite"
  url      = env("DATABASE_URL")
}

model Item {
  id          Int     @id @default(autoincrement())
  link        String
  description String
  quantity    Int
  nameProduct String  @unique
  price       Float
  type        String
  seller      Seller  @relation(fields: [sellerName], references: [userName], onDelete: Cascade)
  sellerName  String
  companyName String?
}

model Seller {
  userName    String @id @unique
  companyName String
  password    String
  bankAccount String
  items       Item[]
}

model User {
  userName      String        @id
  firstName     String
  lastName      String
  password      String
  email         String        @unique
  typeOfAccount String
  bankAccount   String
  shipping      String
  balance       Float         @default(0)
  active        Boolean       @default(false)
  SaleHistory   SaleHistory[]
}

model SaleHistory {
  id          Int    @id @default(autoincrement())
  userName    String
  user        User   @relation(fields: [userName], references: [userName], onDelete: Cascade)
  nameProduct String
  price       Float
  quantity    Int
}

model CartItem {
  id          Int    @id @default(autoincrement())
  nameProduct String @unique
  price       Float
  quantity    Int
}

model ModifyItem {
  id          Int    @id @default(autoincrement())
  nameProduct String @unique
}
