//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table Item {
  id Int [pk, increment]
  link String [not null]
  description String [not null]
  quantity Int [not null]
  nameProduct String [unique, not null]
  price Float [not null]
  type String [not null]
  seller Seller [not null]
  sellerName String [not null]
  companyName String
}

Table Seller {
  userName String [pk]
  companyName String [not null]
  password String [not null]
  bankAccount String [not null]
  items Item [not null]
}

Table User {
  userName String [pk]
  firstName String [not null]
  lastName String [not null]
  password String [not null]
  email String [unique, not null]
  typeOfAccount String [not null]
  bankAccount String [not null]
  shipping String [not null]
  balance Float [not null, default: 0]
  active Boolean [not null, default: false]
  SaleHistory SaleHistory [not null]
}

Table SaleHistory {
  id Int [pk, increment]
  userName String [not null]
  user User [not null]
  nameProduct String [not null]
  price Float [not null]
  quantity Int [not null]
}

Table CartItem {
  id Int [pk, increment]
  nameProduct String [unique, not null]
  price Float [not null]
  quantity Int [not null]
}

Table ModifyItem {
  id Int [pk, increment]
  nameProduct String [unique, not null]
}

Ref: Item.sellerName > Seller.userName [delete: Cascade]

Ref: SaleHistory.userName > User.userName [delete: Cascade]